@@ -33,6 +33,8 @@ Improved TBBlue emulation:
 -Legacy hi-res and border effects disabled by default. Reduces up to 13% cpu use or gain 17 FPS on my environment
 -Emulate register 0x8E (142) => Spectrum 128K Memory Mapping
 -Allow to download a 512 MB TBBlue SD official card (allowed download sizes: 32MB, 128MB, 512MB, 2 GB)
+-Added Layer2 modes 320x256 and 640x256
+-Allow paths with backslashes on esxdos handler
 
 Improved debugging:
 -Added breakpoint action "reset-tstatp"
@@ -55,6 +57,10 @@ Fixed Esxdos handler:
 
 Fixed SCF/CCF undocumented flags emulation. Not enabled by default on compilation because almost no one is using this
 Fixed saving "Show CPU usage" setting on footer
+
+
+Fixed tbblue bugs:
+-Fix 8 first lines of tiles on border not shown
 
 
 
